JDK17 switch pattern matching